[package]
name = "godot-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Dheatly23 <71598333+Dheatly23@users.noreply.github.com>"]
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
panic = "abort"
debug-assertions = false
overflow-checks = false

[dependencies]
scopeguard = "^1.2"
parking_lot = "^0.12"
rayon = "^1.8"
nom = "^7.1"
anyhow = { version = "^1.0", features = ["backtrace"] }
slab = { version = "^0.4", optional = true }
wasi-common = { version = "^18.0", optional = true }
wasmparser = { version = "^0.121", optional = true }
bytes = { version = "^1.5", optional = true }
wat = { version = "^1.0", optional = true }
async-trait = { version = "^0.1", optional = true }
cfg-if = "^1.0"
memchr = { version = "^2.7", optional = true }
camino = { version = "^1.1", optional = true }

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
rev = "fe5b02ba6abec0ba2d8fff612368a9c896872810"

[dependencies.wasmtime]
version = "^18.0"
default-features = false
features = [
  "runtime",
  "cranelift",
  "wat",
  "parallel-compilation",
  "demangle",
  "addr2line",
]

[dependencies.wasmtime-wasi]
version = "^18.0"
optional = true
default-features = false
features = [
  "wasi-common-deprecations",
]

[dependencies.once_cell]
version = "^1.19"
features = [
  "parking_lot",
]

[features]
default = ["epoch-timeout", "memory-limiter", "wasi", "object-registry"]
memory-limiter = []
epoch-timeout = []
object-registry-compat = ["dep:slab"]
object-registry-extern = []
object-registry = ["object-registry-compat", "object-registry-extern"]
more-precise-timer = []
deterministic-wasm = []
component-model = [
  "wasmtime/component-model",
  "dep:wasmparser",
  "dep:wat",
]
wasi = [
  "dep:wasmtime-wasi",
  "dep:wasi-common",
  "dep:async-trait",
  "dep:memchr",
  "dep:camino",
]
wasi-preview2 = [
  "dep:bytes",
  "wasi",
  "component-model",
  "wasmtime-wasi/preview2",
  "wasmtime-wasi/preview1-on-preview2",
]
godot-component = [
  "dep:slab",
  "component-model",
]

[workspace]
members = [
  "example/wasm/*",
]
exclude = [
  "example/wasm/.cargo",
]
