[package]
name = "godot-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Dheatly23 <71598333+Dheatly23@users.noreply.github.com>"]
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
panic = "abort"
debug-assertions = false
overflow-checks = false

[dependencies]
scopeguard = "^1.2"
parking_lot = "^0.12"
rayon = "^1.8"
nom = "^7.1"
either = "^1.0"
anyhow = { version = "^1.0", features = ["backtrace"] }
slab = { version = "^0.4", optional = true }
#wasi-common = { version = "^18.0", optional = true }
wasmparser = { version = "^0.219", optional = true }
bytes = { version = "^1.5", optional = true }
wat = { version = "~1", optional = true }
#cap-std = { version = "^3.0", optional = true }
async-trait = { version = "^0.1", optional = true }
cfg-if = "^1.0"
memchr = { version = "^2.7", optional = true }
camino = { version = "^1.1", optional = true }

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
rev = "5e9b965b2dbf288f4660b3bf0ada220be1e7e8c6"
features = [
  "experimental-threads",
  "register-docs",
]

[dependencies.wasmtime]
version = "^26.0"
default-features = false
features = [
  "runtime",
  "cranelift",
  "wat",
  "parallel-compilation",
  "gc",
  "threads",
  "demangle",
  "addr2line",
  "debug-builtins",
]

[dependencies.wasmtime-wasi]
version = "^26.0"
optional = true
default-features = false
features = [
#  "wasi-common-deprecations",
  "preview1",
]

[dependencies.once_cell]
version = "^1.20"
features = [
  "parking_lot",
]

[features]
default = ["epoch-timeout", "memory-limiter", "wasi", "object-registry"]
memory-limiter = []
epoch-timeout = []
object-registry-compat = ["dep:slab"]
object-registry-extern = []
object-registry = ["object-registry-compat", "object-registry-extern"]
more-precise-timer = []
deterministic-wasm = []
component-model = [
  "wasmtime/component-model",
  "dep:wasmparser",
  "dep:wat",
]
wasi = [
  "dep:wasmtime-wasi",
#  "dep:wasi-common",
#  "dep:cap-std",
  "dep:async-trait",
  "dep:memchr",
  "dep:camino",
  "dep:bytes",
]
wasi-preview2 = [
  "dep:bytes",
  "wasi",
  "component-model",
#  "wasmtime-wasi/preview2",
#  "wasmtime-wasi/preview1-on-preview2",
]
godot-component = [
  "dep:slab",
  "component-model",
]

[workspace]
members = [
  "example/wasm/*",
]
exclude = [
  "example/wasm/.cargo",
]
