[package]
name = "godot-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Dheatly23 <71598333+Dheatly23@users.noreply.github.com>"]
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
panic = "abort"
debug-assertions = false
overflow-checks = false

[dependencies]
rayon = "^1.8"
nom = "^8.0"
either = "^1.0"
smol_str = "^0.3"
wasmparser = { version = "^0.224", optional = true }
wat = { version = "~1", optional = true }
log4rs = { version = "^1", optional = true }
log = { version = "^0.4", optional = true }
rbitset = { version = "^0.3", optional = true }
serde = { version = "^1", features = ["derive"], optional = true }

scopeguard = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
cfg-if = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
slab = { workspace = true, optional = true }
camino = { workspace = true, optional = true }
memchr = { workspace = true, optional = true }

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
rev = "a2d4861383ac5e4a2a4d80a5ce03b12374309d98"
features = [
  "experimental-threads",
  "register-docs",
]

[dependencies.wasmtime]
workspace = true
features = [
  "runtime",
  "cranelift",
  "wat",
  "parallel-compilation",
  "gc",
  "gc-drc",
  "gc-null",
  "threads",
  "demangle",
  "addr2line",
  "debug-builtins",
  "signals-based-traps",
]

[dependencies.wasi-isolated-fs]
path = "crates/wasi-isolated-fs"
optional = true

[dev-dependencies]
proptest = { workspace = true }

[features]
default = ["epoch-timeout", "memory-limiter", "wasi", "object-registry", "wasi-preview2", "godot-component"]
memory-limiter = []
epoch-timeout = []
object-registry-compat = ["dep:slab"]
object-registry-extern = []
object-registry = ["object-registry-compat", "object-registry-extern"]
more-precise-timer = []
deterministic-wasm = []
component-model = [
  "wasmtime/component-model",
  "dep:wasmparser",
  "dep:wat",
]
wasi = [
  "dep:wasi-isolated-fs",
  "dep:camino",
]
wasi-preview2 = [
  "wasi",
  "component-model",
]
godot-component = [
  "dep:slab",
  "dep:rbitset",
  "component-model",
]
log = [
  "dep:log",
  "dep:log4rs",
  "dep:memchr",
  "dep:serde",
  "tracing/log",
]

[workspace]
members = [
  "example/wasm/*",
  "crates/*",
]
exclude = [
  "example/wasm/.cargo",
]

[workspace.dependencies]
scopeguard = "^1.2"
anyhow = { version = "^1.0", features = ["backtrace"] }
slab = "^0.4"
bytes = "^1.5"
parking_lot = "^0.12"
memchr = "^2.7"
camino = "^1.1"

proptest = "^1"
tracing = "0.1"

# Dependencies for example crates
cfg-if = "^1.0"
glam = "^0.29"
colorgrad = { version = "^0.7", default-features = false, features = ["preset"] }

rand_xoshiro = "^0.7"
getrandom = "^0.3"
rand = { version = "^0.9", default-features = false }
rand_distr = { version = "^0.5", default-features = false }
rand_core = { version = "^0.9", features = ["os_rng"] }

[workspace.dependencies.wasmtime]
version = "^29.0"
default-features = false
features = [
  "std",
]

[workspace.dependencies.wiggle]
version = "^29.0"
default-features = false
features = [
  "wasmtime",
  "witx",
]

[workspace.dependencies.once_cell]
version = "^1.20"
features = [
  "parking_lot",
]
