[package]
name = "wasi-isolated-fs"
version = "0.1.0"
edition = "2021"
authors = ["Dheatly23 <71598333+Dheatly23@users.noreply.github.com>"]
license = "Apache-2.0"
publish = false

[dependencies]
scopeguard = { workspace = true }
anyhow = { workspace = true }
cfg-if = { workspace = true }
parking_lot = { workspace = true, features = ["arc_lock"] }
slab = { workspace = true }
bytes = { workspace = true }
memchr = { workspace = true }
camino = { workspace = true }

[dependencies.wasmtime]
workspace = true
features = [
  "runtime",
  "component-model",
]

[dependencies.smallvec]
version = "~1"
features = [
  "union",
  "const_generics",
  "const_new",
  "write",
]
