[package]
name = "three-d-render"
version = "0.1.0"
edition = "2021"
authors = ["Dheatly23 <71598333+Dheatly23@users.noreply.github.com>"]
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = { workspace = true }
glam = { workspace = true }
colorgrad = { workspace = true }

rand_xoshiro = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_core = { workspace = true }
getrandom = { workspace = true }
