[package]
name = "two-d-render"
version = "0.1.0"
edition = "2021"
authors = ["Dheatly23 <71598333+Dheatly23@users.noreply.github.com>"]
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1"
colorgrad = { version = "^0.6", default-features = false }

rand_xoshiro = "^0.6"
rand_core = { version = "^0.6", features = ["getrandom"] }
getrandom = { version = "^0.2", features = ["custom"] }
